--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
     <div class="content">
         <h3>I'm SABARIVASAN</h3>
-        <span class="tag">Full Stack Developer</span>
+        <span class="tag"></span>
         
         <p>I am a PG Student in Pondicherry University, India. 
           I am an Information Technology undergraduate from Saradha Gangadharan College.
@@ -170,7 +170,7 @@
         <div class="content">
         <h3>Master of Science | Computer Science </h3>
         <p>Pondicherry University (A Central Government University) </p>
-        <h4>2023-2025 | Pursuing</h4>
+        <h4>2023-2025 | Completed</h4>
         </div>
     </div>
 
